feat(status): show source code url in embed footer

--- a/example.env
+++ b/example.env
@@ -13,3 +13,6 @@ db_path = "data.json" # Where data will be stored
 status_embed_color = "52,235,125" # R, G, B
 status_banner = "banner_url" # Leave as "" for no banner
 hide_ip = no # Whether or not to display the server's IP in the server status message. Must be "yes" or "no"
+
+# GitHub Repo URL
+github_repo_url = "https://github.com/Cuh4/XHPBot"
