feat(db): add primary database of sqlite using peewee for storing data, alongside a secondary database of a custom json db solution for storing simple data that normally doesn't get updated or requires >1 records

--- a/example.env
+++ b/example.env
@@ -3,16 +3,17 @@ bot_token = "" # The token of the bot @ https://discord.com/developers/applicati
 
 # Status
 server_ip = "ip:port" # The IP and port of the server
-refresh_rate = 15 # In seconds. Recommended to be >10s due to discord rate limit
+status_update_interval = 15 # In seconds. Recommended to be >10s due to discord rate limit
 status_channel = "1" # The ID of the channel the server status should be in
+status_banner = "banner_url" # Leave as "" for no banner
+status_hide_ip = no # Whether or not to display the server's IP in the server status message. Must be "yes" or "no"
+
+# Statistics
+statistics_update_interval = 5 # In minutes
 
 # Data
-db_path = "data.json" # Where data will be stored
-
-# Appearance
-status_embed_color = "52,235,125" # R, G, B
-status_banner = "banner_url" # Leave as "" for no banner
-hide_ip = no # Whether or not to display the server's IP in the server status message. Must be "yes" or "no"
+sqldb_path = "data/bot.db" # Where data will be stored (SQLLite)
+jsondb_path = "data/bot.json" # Where data will be stored (JSON)
 
 # GitHub Repo URL
 github_repo_url = "https://github.com/Cuh4/XHPBot"
