--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
+aiohttp==3.10.10
 colorama==0.4.6
 discord.py==2.4.0
+peewee==3.17.7
 psutil==5.9.7
 python-dotenv==1.0.1
-python_jsonstore==1.3.0
-Requests==2.32.3
-audioop-lts
