feat(example.env): fix typo ("sqllite" --> "sqlite")

--- a/example.env
+++ b/example.env
@@ -12,7 +12,7 @@ status_hide_ip = no # Whether or not to display the server's IP in the server st
 statistics_update_interval = 5 # In minutes
 
 # Data
-sqldb_path = "data/bot.db" # Where data will be stored (SQLLite)
+sqldb_path = "data/bot.db" # Where data will be stored (SQLite)
 jsondb_path = "data/bot.json" # Where data will be stored (JSON)
 
 # GitHub Repo URL
