feat(env): add `waiting_list_update_interval`

--- a/example.env
+++ b/example.env
@@ -11,9 +11,12 @@ status_hide_ip = no # Whether or not to display the server's IP in the server st
 # Statistics
 statistics_update_interval = 5 # In minutes
 
+# Waiting List
+waiting_list_update_interval = 10 # In seconds
+
 # Data
 sqldb_path = "data/bot.db" # Where data will be stored (SQLite)
 jsondb_path = "data/bot.json" # Where data will be stored (JSON)
 
-# GitHub Repo URL
+# Repo
 github_repo_url = "https://github.com/Cuh4/XHPBot"
