feat(env): add description to `github_repo_url`

--- a/example.env
+++ b/example.env
@@ -19,4 +19,4 @@ sqldb_path = "data/bot.db" # Where data will be stored (SQLite)
 jsondb_path = "data/bot.json" # Where data will be stored (JSON)
 
 # Repo
-github_repo_url = "https://github.com/Cuh4/XHPBot"
+github_repo_url = "https://github.com/Cuh4/XHPBot" # URL to GitHub repo if any
