feat(cogs): add `live_chat_cog` - sends a message when a player joins - sends a message when a player leaves - can't detect player messages nor player names without access to server stdout. one day i'll integrate the archean server with the cuhhub backend to allow for this

--- a/example.env
+++ b/example.env
@@ -4,7 +4,7 @@ bot_token = "" # The token of the bot @ https://discord.com/developers/applicati
 # Status
 server_ip = "ip:port" # The IP and port of the server
 status_update_interval = 15 # In seconds. Recommended to be >10s due to discord rate limit
-status_channel = "1" # The ID of the channel the server status should be in
+status_channel = 1 # The ID of the channel the server status should be in
 status_banner = "banner_url" # Leave as "" for no banner
 status_hide_ip = no # Whether or not to display the server's IP in the server status message. Must be "yes" or "no"
 
@@ -14,9 +14,13 @@ statistics_update_interval = 5 # In minutes
 # Waiting List
 waiting_list_update_interval = 10 # In seconds
 
+# Live Chat
+live_chat_update_interval = 2 # In seconds
+live_chat_channel_id = 1 # The ID of the live chat channel for the Archean server
+
 # Data
-sqldb_path = "data/bot.db" # Where data will be stored (SQLite)
-jsondb_path = "data/bot.json" # Where data will be stored (JSON)
+sqldb_path = "../data/bot.db" # Where data will be stored (SQLite)
+jsondb_path = "../data/bot.json" # Where data will be stored (JSON)
 
 # Repo
 github_repo_url = "https://github.com/cuhHub/ArcheanBot" # URL to GitHub repo if any
