feat: show server domain instead of raw ip if it exists

--- a/example.env
+++ b/example.env
@@ -2,6 +2,7 @@
 bot_token = "" # The token of the bot @ https://discord.com/developers/applications
 
 # Status
+server_domain = "" # The domain of the server (e.g. "servers.cuhhub.com"). Leave as "" for no domain and the raw IP will be shown instead
 server_ip = "ip:port" # The IP and port of the server
 status_update_interval = 15 # In seconds. Recommended to be >10s due to discord rate limit
 status_channel = 1 # The ID of the channel the server status should be in
